added the Reservation part